# safanaj-gnome-shell-extensions

./: Makefile.am  README.md  configure.ac  include.mk  settings.mk
build-aux/: .gitignore
simple-test/: Makefile.am  metadata.json.in
upower/: Makefile.am  extension.js  metadata.json.in  stylesheet.css
